tablet og desktop næsten færdig

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
 
        <a href="index.html"><img class="logo" src="materiale/logo_mobile.png" alt="logo"></a>
+       <a href="index.html"><img class="logo2 hide" src="materiale/logo.png" alt="logo"></a>
 
 
         <div class="burger-button">
@@ -19,7 +20,7 @@
 
        <nav id="menu" class="hide">
            <a href="#video_sektion">KAMPAGNE</a>
-           <a href="omos.html">OM OS</a>
+           <a href="#infotekst">OM OS</a>
            <a href="#kontakt">KONTAKT</a>
        </nav>
 
@@ -36,20 +37,26 @@
     <div class="infografik">
     <img src="materiale/infografik_tidligerecyklister_mobile.png" alt="Infografik tidligere cykelister">
     </div>
-    <div class="infotekst">
+    <div class="infografik2 hide">
+    <img src="materiale/infografik_tidligerecyklister.png" alt="Infografik tidligere cykelister">
+    </div>
+    <div id="infotekst">
         <img src="materiale/info.png" alt="info">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a leo lectus. In scelerisque dui ac lobortis eleifend. Curabitur vel nunc nisi. Phasellus pretium justo vel rutrum consectetur. Suspendisse ut condimentum mauris. Pellentesque luctus lectus placerat nisl molestie, sed faucibus massa posuere. Duis at dignissim est. Suspendisse porta augue orci. Interdum et malesuada fames ac ante ipsum primis in faucibus.Etiam tempor nibh eu dignissim consequat. Proin nec nisl ut massa tempor tempor. Sed at faucibus nibh, a dapibus ipsum. Ut mattis tempus ex, a venenatis justo auctor sed. Praesent imperdiet aliquam ornare.  </p>
     </div>
     <div class="infografik">
     <img src="materiale/infografik_trafikanter_mobile.png" alt="Infografik trafikanter">
     </div>
+      <div class="infografik2 hide">
+    <img src="materiale/infografik_trafikanter.png" alt="Infografik tidligere cykelister">
+    </div>
 
       <footer id="kontakt">
 
-       <div> <h5>ADRESSE</h5>
+       <div class="sektion"> <h5>ADRESSE</h5>
         <p>Lersø Parkallé 111 <br> 2100 København Ø</p></div>
 
-       <div> <h5>KONTAKT</h5>
+       <div class="sektion"> <h5>KONTAKT</h5>
         <p>Tlf.: 3916 3939 <br> Mail: info@sikkertrafik.dk <br> Pressetelefon: 3916 3969</p></div>
     </footer>
 
