Første halvcirkler lavet

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
    </header>
 
     <div id="video_sektion">
+      <div class="kampagnelogo">
+       <div class="circle"></div>
         <h2>Ingen bump på vej</h2>
-
+    </div>
 
         <div class="button">
     <a href="video.html">SE VIDEO</a>
