cirkel slettet igen

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
            <a href="#video_sektion">KAMPAGNE</a>
            <a href="#infotekst">OM OS</a>
            <a href="#kontakt">KONTAKT</a>
+           <a href="#video">VIDEO</a>
        </nav>
 
    </header>
@@ -29,11 +30,11 @@
     <div id="video_sektion">
       <div class="kampagnelogo">
        <div class="circle"></div>
-        <h2>Ingen bump på vej</h2>
+        <h2>Ingen Bond på vejen</h2>
     </div>
 
         <div class="button">
-    <a href="video.html">SE VIDEO</a>
+    <a href="video.html">TILMELD DIG</a>
     </div>
     </div>
     <div class="infografik">
