--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="video_sektion">
       <div class="kampagnelogo">
        <div class="circle"></div>
-        <h2>Ingen Bond på vejen</h2>
+        <h2>Ingen Bond på vej</h2>
     </div>
 
         <div class="button">
@@ -53,6 +53,26 @@
       <div class="infografik2 hide">
     <img src="materiale/infografik_trafikanter.png" alt="Infografik tidligere cykelister">
     </div>
+
+      <div class="omos">
+          <h4>Om Rådet for Sikker Trafik</h4>
+          <div class="omos_sektion">
+            <div class="omos_overskrift">
+             <h6>Hvad arbejder vi for?</h6>
+              </div>
+             <div class="omos_tekst">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a leo lectus. In scelerisque dui ac lobortis eleifend. Curabitur vel nunc nisi. Phasellus pretium justo vel rutrum consectetur. Suspendisse ut condimentum mauris. Pellentesque luctus lectus placerat nisl molestie, sed faucibus massa posuere. Duis at dignissim est. Suspendisse porta augue orci. Interdum et malesuada fames ac ante ipsum primis in faucibus.Etiam tempor nibh eu dignissim consequat. Proin nec nisl ut massa tempor tempor. Sed at faucibus nibh, a dapibus ipsum. Ut mattis tempus ex, a venenatis justo auctor sed. Praesent imperdiet aliquam ornare. </p>
+              </div>
+          </div>
+          <div class="omos_sektion">
+            <div class="omos_overskrift">
+             <h6>Hvordan arbejder vi?</h6>
+             </div>
+             <div class="omos_tekst">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a leo lectus. In scelerisque dui ac lobortis eleifend. Curabitur vel nunc nisi. Phasellus pretium justo vel rutrum consectetur. Suspendisse ut condimentum mauris. Pellentesque luctus lectus placerat nisl molestie, sed faucibus massa posuere. Duis at dignissim est. Suspendisse porta augue orci. Interdum et malesuada fames ac ante ipsum primis in faucibus.Etiam tempor nibh eu dignissim consequat. Proin nec nisl ut massa tempor tempor. Sed at faucibus nibh, a dapibus ipsum. Ut mattis tempus ex, a venenatis justo auctor sed. Praesent imperdiet aliquam ornare. </p>
+              </div>
+          </div>
+      </div>
 
       <footer id="kontakt">
 
