--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingen bump på vej</title>
+    <title>Rådet for Sikker Trafik</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="video Rådet for sikker Trafik" content="Video om cyklister i byen - Ingen Bond på Vejen">
 </head>
 
 <body>
@@ -19,18 +20,18 @@
        </div>
 
        <nav id="menu" class="hide">
-           <a href="#video_sektion">KAMPAGNE</a>
-           <a href="#infotekst">OM OS</a>
+            <a href="index.html">KAMPAGNE</a>
+           <a href="omos.html">OM OS</a>
            <a href="#kontakt">KONTAKT</a>
-           <a href="#video">VIDEO</a>
+           <a href="#video_sektion">VIDEO</a>
        </nav>
 
    </header>
 
-    <div id="video_sektion">
+    <div id="start_sektion">
       <div class="kampagnelogo">
        <div class="circle"></div>
-        <h2>Ingen Bond på vej</h2>
+        <h2>Ingen Bond på vejen</h2>
     </div>
 
         <div class="button">
@@ -54,25 +55,13 @@
     <img src="materiale/infografik_trafikanter.png" alt="Infografik tidligere cykelister">
     </div>
 
-      <div class="omos">
-          <h4>Om Rådet for Sikker Trafik</h4>
-          <div class="omos_sektion">
-            <div class="omos_overskrift">
-             <h6>Hvad arbejder vi for?</h6>
-              </div>
-             <div class="omos_tekst">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a leo lectus. In scelerisque dui ac lobortis eleifend. Curabitur vel nunc nisi. Phasellus pretium justo vel rutrum consectetur. Suspendisse ut condimentum mauris. Pellentesque luctus lectus placerat nisl molestie, sed faucibus massa posuere. Duis at dignissim est. Suspendisse porta augue orci. Interdum et malesuada fames ac ante ipsum primis in faucibus.Etiam tempor nibh eu dignissim consequat. Proin nec nisl ut massa tempor tempor. Sed at faucibus nibh, a dapibus ipsum. Ut mattis tempus ex, a venenatis justo auctor sed. Praesent imperdiet aliquam ornare. </p>
-              </div>
-          </div>
-          <div class="omos_sektion">
-            <div class="omos_overskrift">
-             <h6>Hvordan arbejder vi?</h6>
-             </div>
-             <div class="omos_tekst">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a leo lectus. In scelerisque dui ac lobortis eleifend. Curabitur vel nunc nisi. Phasellus pretium justo vel rutrum consectetur. Suspendisse ut condimentum mauris. Pellentesque luctus lectus placerat nisl molestie, sed faucibus massa posuere. Duis at dignissim est. Suspendisse porta augue orci. Interdum et malesuada fames ac ante ipsum primis in faucibus.Etiam tempor nibh eu dignissim consequat. Proin nec nisl ut massa tempor tempor. Sed at faucibus nibh, a dapibus ipsum. Ut mattis tempus ex, a venenatis justo auctor sed. Praesent imperdiet aliquam ornare. </p>
-              </div>
-          </div>
-      </div>
+    <div id="video_sektion">
+        <iframe title=” Rådet for sikker trafik” width="560" height="315"
+src="____" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen >
+</iframe>
+
+    </div>
+
 
       <footer id="kontakt">
 
