nye ting tilføjet

--- a/omos.html
+++ b/omos.html
@@ -21,8 +21,8 @@
        <nav id="menu" class="hide">
            <a href="index.html">KAMPAGNE</a>
            <a href="omos.html">OM OS</a>
-           <a href="#kontakt">KONTAKT</a>
-           <a href="index.html#video_sektion">VIDEO</a>
+           <a href="index.html#kontakt">KONTAKT</a>
+            <a href="videoportfolio.html">VIDEO PORTFOLIO</a>
        </nav>
 
    </header>
