--- a/index.html
+++ b/index.html
@@ -22,20 +22,19 @@
        <nav id="menu" class="hide">
             <a href="index.html">KAMPAGNE</a>
            <a href="omos.html">OM OS</a>
-           <a href="#kontakt">KONTAKT</a>
-           <a href="#video_sektion">VIDEO</a>
+           <a href="index.html#kontakt">KONTAKT</a>
+           <a href="videoportfolio.html">VIDEO PORTFOLIO</a>
        </nav>
 
    </header>
 
     <div id="start_sektion">
       <div class="kampagnelogo">
-       <div class="circle"></div>
         <h2>Ingen Bond på vejen</h2>
     </div>
 
         <div class="button">
-    <a href="video.html">TILMELD DIG</a>
+    <a href="tilmelddig.html">TILMELD DIG</a>
     </div>
     </div>
     <div class="infografik">
@@ -55,12 +54,12 @@
     <img src="materiale/infografik_trafikanter.png" alt="Infografik tidligere cykelister">
     </div>
 
-    <div id="video_sektion">
+   <!--- <div id="video_sektion">
         <iframe title=” Rådet for sikker trafik” width="560" height="315"
 src="____" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen >
 </iframe>
 
-    </div>
+    </div> -->
 
 
       <footer id="kontakt">
@@ -70,6 +69,11 @@ src="____" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen >
 
        <div class="sektion"> <h5>KONTAKT</h5>
         <p>Tlf.: 3916 3939 <br> Mail: info@sikkertrafik.dk <br> Pressetelefon: 3916 3969</p></div>
+        <br><br>
+        <a class="some_ikoner" href="https://www.facebook.com/sikkertrafik/" target="_blank"><img src="materiale/facebook%20ikon.png" alt="facebook ikon"></a>
+        <a class="some_ikoner" href="https://www.instagram.com/raadet_for_sikkertrafik//" target="_blank"><img src="materiale/insta%20ikon.png" alt="instagram ikon"></a>
+
+
     </footer>
 
 
