--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
        <nav id="menu" class="hide">
             <a href="index.html">KAMPAGNE</a>
+            <a href="tilmelddig.html">TILMELD DIG</a>
            <a href="omos.html">OM OS</a>
            <a href="index.html#kontakt">KONTAKT</a>
            <a href="videoportfolio.html">VIDEO PORTFOLIO</a>
@@ -29,6 +30,13 @@
    </header>
 
     <div id="start_sektion">
+
+       <picture class="splash">
+        <source media="(min-width: 1024px)" srcset="materiale/splash_website.png">
+        <source media="(min-width: 528px)" srcset="materiale/splash_ipad.png">
+        <img src="materiale/splash_iphone.png" alt="Splashbillede">
+    </picture>
+
       <div class="kampagnelogo">
         <h2>Ingen Bond på vejen</h2>
     </div>
@@ -37,15 +45,15 @@
     <a href="tilmelddig.html">TILMELD DIG</a>
     </div>
     </div>
-    <div class="infografik">
+    <div class="infografik top">
     <img src="materiale/infografik_tidligerecyklister_mobile.png" alt="Infografik tidligere cykelister">
     </div>
-    <div class="infografik2 hide">
+    <div class="infografik2 hide top">
     <img src="materiale/infografik_tidligerecyklister.png" alt="Infografik tidligere cykelister">
     </div>
     <div id="infotekst">
         <img src="materiale/info.png" alt="info">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a leo lectus. In scelerisque dui ac lobortis eleifend. Curabitur vel nunc nisi. Phasellus pretium justo vel rutrum consectetur. Suspendisse ut condimentum mauris. Pellentesque luctus lectus placerat nisl molestie, sed faucibus massa posuere. Duis at dignissim est. Suspendisse porta augue orci. Interdum et malesuada fames ac ante ipsum primis in faucibus.Etiam tempor nibh eu dignissim consequat. Proin nec nisl ut massa tempor tempor. Sed at faucibus nibh, a dapibus ipsum. Ut mattis tempus ex, a venenatis justo auctor sed. Praesent imperdiet aliquam ornare.  </p>
+        <p>Vidste du at 61% af de ældre cyklister som er utrygge i trafikken, begrunder deres utryghed i trafikken med bilister der ikke tager nok hensyn, eller andre cyklister der ikke overholder færdselsreglerne. Denne procentdel vil vi gerne lave om på. Rådet for Sikker Trafik er en privat forening med 48 medlemmer, der på hver sin måde arbejder for at nedbringe antallet af dræbte og kvæstede i trafikken. Vi får et drift- og kampagnetilskud fra det offentlige og derudover modtager vi midler fra fonde og organisationer. Vi er tilknyttet Transport- og Bygningsministeriet. </p>
     </div>
     <div class="infografik">
     <img src="materiale/infografik_trafikanter_mobile.png" alt="Infografik trafikanter">
@@ -71,7 +79,7 @@ src="____" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen >
         <p>Tlf.: 3916 3939 <br> Mail: info@sikkertrafik.dk <br> Pressetelefon: 3916 3969</p></div>
         <br><br>
         <a class="some_ikoner" href="https://www.facebook.com/sikkertrafik/" target="_blank"><img src="materiale/facebook%20ikon.png" alt="facebook ikon"></a>
-        <a class="some_ikoner" href="https://www.instagram.com/raadet_for_sikkertrafik//" target="_blank"><img src="materiale/insta%20ikon.png" alt="instagram ikon"></a>
+        <a class="some_ikoner" href="https://www.instagram.com/raadet_for_sikkertrafik/" target="_blank"><img src="materiale/insta%20ikon.png" alt="instagram ikon"></a>
 
 
     </footer>
