--- a/omos.html
+++ b/omos.html
@@ -18,11 +18,12 @@
        <img src="materiale/burger.png" alt="menu">
        </div>
 
-       <nav id="menu" class="hide">
-           <a href="index.html">KAMPAGNE</a>
+      <nav id="menu" class="hide">
+            <a href="index.html">KAMPAGNE</a>
+            <a href="tilmelddig.html">TILMELD DIG</a>
            <a href="omos.html">OM OS</a>
            <a href="index.html#kontakt">KONTAKT</a>
-            <a href="videoportfolio.html">VIDEO PORTFOLIO</a>
+           <a href="videoportfolio.html">VIDEO PORTFOLIO</a>
        </nav>
 
    </header>
@@ -59,15 +60,19 @@ Saglighed og dokumentation er succeskriterier for vores arbejde. Det betyder, at
           </div>
       </div>
 
-         <footer id="kontakt">
+       <footer id="kontakt">
 
        <div class="sektion"> <h5>ADRESSE</h5>
         <p>Lersø Parkallé 111 <br> 2100 København Ø</p></div>
 
        <div class="sektion"> <h5>KONTAKT</h5>
         <p>Tlf.: 3916 3939 <br> Mail: info@sikkertrafik.dk <br> Pressetelefon: 3916 3969</p></div>
-    </footer>
+        <br><br>
+        <a class="some_ikoner" href="https://www.facebook.com/sikkertrafik/" target="_blank"><img src="materiale/facebook%20ikon.png" alt="facebook ikon"></a>
+        <a class="some_ikoner" href="https://www.instagram.com/raadet_for_sikkertrafik/" target="_blank"><img src="materiale/insta%20ikon.png" alt="instagram ikon"></a>
 
+
+    </footer>
 
 
 
