--- a/tilmelddig.html
+++ b/tilmelddig.html
@@ -19,10 +19,11 @@
        </div>
 
        <nav id="menu" class="hide">
-           <a href="index.html">KAMPAGNE</a>
+            <a href="index.html">KAMPAGNE</a>
+            <a href="tilmelddig.html">TILMELD DIG</a>
            <a href="omos.html">OM OS</a>
            <a href="index.html#kontakt">KONTAKT</a>
-            <a href="videoportfolio.html">VIDEO PORTFOLIO</a>
+           <a href="videoportfolio.html">VIDEO PORTFOLIO</a>
        </nav>
 
    </header>
@@ -54,7 +55,7 @@
 				<input type="text" placeholder="By">
 			</div>
    <div class="tilmeldbutton">
-    <a href="tilmelddig.html">TILMELD DIG</a>
+    <a href="tillykke.html">TILMELD DIG</a>
     </div>
 </div>
 
@@ -64,7 +65,7 @@
 
    <img class="arrow movedown objekt" src="materiale/arrow.png" alt="arrow">
 
-   <img class="merch_sticker" src="materiale/merch-sticker.png" alt="marchandise sticker">
+   <img class="merch_sticker" src="materiale/merch.png" alt="marchandise sticker">
     </div>
 
    <footer id="kontakt">
@@ -74,6 +75,11 @@
 
        <div class="sektion"> <h5>KONTAKT</h5>
         <p>Tlf.: 3916 3939 <br> Mail: info@sikkertrafik.dk <br> Pressetelefon: 3916 3969</p></div>
+        <br><br>
+        <a class="some_ikoner" href="https://www.facebook.com/sikkertrafik/" target="_blank"><img src="materiale/facebook%20ikon.png" alt="facebook ikon"></a>
+        <a class="some_ikoner" href="https://www.instagram.com/raadet_for_sikkertrafik/" target="_blank"><img src="materiale/insta%20ikon.png" alt="instagram ikon"></a>
+
+
     </footer>
     <script src="script.js"></script>
 </body>
