--- a/index.html
+++ b/index.html
@@ -62,12 +62,10 @@
     <img src="materiale/infografik_trafikanter.png" alt="Infografik tidligere cykelister">
     </div>
 
-   <!--- <div id="video_sektion">
-        <iframe title=” Rådet for sikker trafik” width="560" height="315"
-src="____" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen >
-</iframe>
+    <div class="video_sektion_forside">
+      <iframe width="560" height="360" src="https://www.youtube.com/embed/iBPKglIQrq4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    </div> -->
+    </div>
 
 
       <footer id="kontakt">
@@ -77,10 +75,11 @@ src="____" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen >
 
        <div class="sektion"> <h5>KONTAKT</h5>
         <p>Tlf.: 3916 3939 <br> Mail: info@sikkertrafik.dk <br> Pressetelefon: 3916 3969</p></div>
-        <br><br>
+
+        <div class="ikoner">
         <a class="some_ikoner" href="https://www.facebook.com/sikkertrafik/" target="_blank"><img src="materiale/facebook%20ikon.png" alt="facebook ikon"></a>
         <a class="some_ikoner" href="https://www.instagram.com/raadet_for_sikkertrafik/" target="_blank"><img src="materiale/insta%20ikon.png" alt="instagram ikon"></a>
-
+    </div>
 
     </footer>
 
