--- a/videoportfolio.html
+++ b/videoportfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rådet for Sikker Trafik</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="video Rådet for sikker Trafik" content="Video om cyklister i byen - Ingen Bond på Vejen">
 </head>
 
 <body>
@@ -28,15 +29,15 @@
        </nav>
 
    </header>
+    <div class="video_sektion">
+     <h5>KAMPAGNEVIDEO TIL YOUTUBE</h5>
+      <iframe width="560" height="350" src="https://www.youtube.com/embed/iBPKglIQrq4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     </div>
 
-      <!--- <div id="video_sektion">
-        <iframe title=” Rådet for sikker trafik” width="560" height="315"
-src="____" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen >
-</iframe>
-
-    </div> -->
-
-
+     <div class="video_sektion video_sektion2">
+     <h5>KAMPAGNEVIDEO TIL SOME</h5>
+     <iframe width="560" height="350" src="https://www.youtube.com/embed/6XIM6qOFDnM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
 
 
@@ -47,11 +48,13 @@ src="____" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen >
 
        <div class="sektion"> <h5>KONTAKT</h5>
         <p>Tlf.: 3916 3939 <br> Mail: info@sikkertrafik.dk <br> Pressetelefon: 3916 3969</p></div>
-        <br><br>
+
+        <div class="ikoner">
+        <div class="ikoner">
         <a class="some_ikoner" href="https://www.facebook.com/sikkertrafik/" target="_blank"><img src="materiale/facebook%20ikon.png" alt="facebook ikon"></a>
         <a class="some_ikoner" href="https://www.instagram.com/raadet_for_sikkertrafik/" target="_blank"><img src="materiale/insta%20ikon.png" alt="instagram ikon"></a>
-
-
+</div>
+    </div>
     </footer>
 
     <script src="script.js"></script>
