--- a/omos.html
+++ b/omos.html
@@ -67,10 +67,10 @@ Saglighed og dokumentation er succeskriterier for vores arbejde. Det betyder, at
 
        <div class="sektion"> <h5>KONTAKT</h5>
         <p>Tlf.: 3916 3939 <br> Mail: info@sikkertrafik.dk <br> Pressetelefon: 3916 3969</p></div>
-        <br><br>
+        <div class="ikoner">
         <a class="some_ikoner" href="https://www.facebook.com/sikkertrafik/" target="_blank"><img src="materiale/facebook%20ikon.png" alt="facebook ikon"></a>
         <a class="some_ikoner" href="https://www.instagram.com/raadet_for_sikkertrafik/" target="_blank"><img src="materiale/insta%20ikon.png" alt="instagram ikon"></a>
-
+           </div>
 
     </footer>
 
